--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
             </div>
             <div class="featured-text-info">
                 <p>Experienced frontend developer with a passion for creating visually stunning
-                   and user-friendly websites.
+                   and user-friendly websites. If youre looking to build your brand, youve come to the right place.
                 </p>
             </div>
             <div class="featured-text-btn">
                 <button class="btn blue-btn">Hire Me</button>
             </div>
             <div class="social_icons">
-                <div class="icon"><i class="uil uil-instagram"></i></div>
+                <div class="icon"><i class="uil uil-instagram">https://www.instagram.com/kyogrq/</i></div>
                 <div class="icon"><i class="uil uil-github-alt"></i></div>
             </div>
           </div>
@@ -117,10 +117,11 @@
                 </div>
                 <div class="skills-box">
                     <div class="skills-header">
-                        <h3>CMS</h3>
+                        <h3>CMS & Other</h3>
                     </div>
                     <div class="skills-list">
                         <span>WordPress</span>
+                        <span>Photoshop</span>
                     </div>
                 </div>
             </div>
