--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
                         <button class="btn blue-btn">Hire Me</button>
                     </div>
                     <div class="social_icons">
-                        <div class="icon"><i class="uil uil-instagram">https://www.instagram.com/kyogrq/</i></div>
+                        <div class="icon">
+                            <a href="https://www.instagram.com/kyogrq/" target="_blank">
+                                <i class="uil uil-instagram"></i>
+                            </a>
+                        </div>
                         <div class="icon"><i class="uil uil-github-alt"></i></div>
                     </div>
                 </div>
