--- a/index.html
+++ b/index.html
@@ -61,11 +61,7 @@
                         <button class="btn blue-btn">Hire Me</button>
                     </div>
                     <div class="social_icons">
-                        <div class="icon">
-                            <a href="https://www.instagram.com/kyogrq/" target="_blank">
-                                <i class="uil uil-instagram"></i>
-                            </a>
-                        </div>
+                        <div class="icon"><i class="uil uil-instagram"></i></div>
                         <div class="icon"><i class="uil uil-github-alt"></i></div>
                     </div>
                 </div>
