--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
             event.preventDefault();
 
             // These IDs are obtained from your EmailJS dashboard
-            const serviceID = 'YOUR_SERVICE_ID';
-            const templateID = 'YOUR_TEMPLATE_ID';
+            const serviceID = 'contact_service';
+            const templateID = 'contact_form';
 
             emailjs.sendForm(serviceID, templateID, this)
                 .then(() => {
