--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                     <input type="email" class="input-field" placeholder="Email" name="user_email" id="user_email" required>
                                 </div>
                                 <div class="text-area">
-                                    <textarea placeholder="Message" name="message" required></textarea>
+                                    <textarea placeholder="Message" name="message" id="message" required></textarea>
                                 </div>
                                 <div class="form-button">
                                     <button type="submit" class="btn">Send <i class="uil uil-message"></i></button>
