--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     <!-- --------- FAVICON ---------- -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+    emailjs.init({
+    publicKey: "TEJ3_kPECBsD4mYyS",
+    });
+    })();
+    </script>
+    <script "src=assets/js/email.js"></script>
     <title>Portfolio | Benet</title>
 </head>
 <body>
@@ -196,38 +207,5 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- ----- SCROLL REVEAL JS Link----- -->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <!-- ----- EmailJS ----- -->
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript">
-       (function(){
-          emailjs.init("TEJ3_kPECBsD4mYyS");
-       })();
-    </script>
-    <!-- ----- MAIN JS ----- -->
-    <script src="assets/js/main.js"></script>
-    <script>
-    // EmailJS integration
-    document.getElementById('contact-form').addEventListener('submit', function(event) {
-        event.preventDefault();
-
-        // These IDs are obtained from your EmailJS dashboard
-        const serviceID = 'contact_service';
-        const templateID = 'contact_form';
-
-        // Prepare the template parameters with user's name and email
-        const templateParams = {
-            userName: document.getElementById('user_name').value, // Assuming you have an input field with id 'user_name'
-            userEmail: document.getElementById('user_email').value, // Assuming you have an input field with id 'user_email'
-            message: document.getElementById('message').value // Assuming you have an input field with id 'message'
-        };
-
-        emailjs.send(serviceID, templateID, templateParams)
-            .then(() => {
-                alert('Email sent successfully!');
-            }, (err) => {
-                alert(JSON.stringify(err));
-            });
-    });
-</script>
 </body>
 </html>
