--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                         <form id="contact-form">
                             <div class="form-control">
                                 <div class="form-inputs">
-                                    <input type="text" class="input-field" placeholder="Name" name="user_name" id="user_name" required>
-                                    <input type="email" class="input-field" placeholder="Email" name="user_email" id="user_email" required>
+                                    <input type="text" class="input-field" placeholder="Name" name="user_name" id="name" required>
+                                    <input type="email" class="input-field" placeholder="Email" name="user_email" id="email" required>
                                 </div>
                                 <div class="text-area">
                                     <textarea placeholder="Message" name="message" id="message" required></textarea>
