--- a/index.html
+++ b/index.html
@@ -4,31 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- --------- UNICONS ---------- -->
+    <!-- UNICONS -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 
-    <!-- --------- CSS ---------- -->
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <!-- --------- FAVICON ---------- -->
+    <!-- FAVICON -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    <!-- EmailJS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     </script>
     <script type="text/javascript">
-    (function(){
-    emailjs.init({
-    publicKey: "TEJ3_kPECBsD4mYyS",
-    });
-    })();
+        (function(){
+            emailjs.init({
+                publicKey: "TEJ3_kPECBsD4mYyS",
+            });
+        })();
     </script>
-    <script "src=assets/js/email.js"></script>
+
+    <!-- Custom Email JS -->
+    <script src="assets/js/email.js"></script>
+
     <title>Portfolio | Benet</title>
 </head>
 <body>
     <div class="container">
-        <!-- --------------- HEADER --------------- -->
+        <!-- HEADER -->
         <nav id="header">
             <div class="nav-logo">
                 <p class="nav-name">Benet</p>
@@ -52,9 +55,9 @@
             </div>
         </nav>
 
-        <!-- -------------- MAIN ---------------- -->
+        <!-- MAIN -->
         <main class="wrapper">
-            <!-- -------------- FEATURED BOX ---------------- -->
+            <!-- FEATURED BOX -->
             <section class="featured-box" id="home">
                 <div class="featured-text">
                     <div class="featured-text-card">
@@ -92,7 +95,8 @@
                     </a>
                 </div>
             </section>
-            <!-- -------------- ABOUT BOX ---------------- -->
+
+            <!-- ABOUT BOX -->
             <section class="section" id="about">
                 <div class="top-header">
                     <h1>About Me</h1>
@@ -141,7 +145,7 @@
                 </div>
             </section>
 
-            <!-- -------------- CONTACT BOX ---------------- -->
+            <!-- CONTACT BOX -->
             <section class="section" id="contact">
                 <div class="top-header">
                     <h1>Get in touch</h1>
@@ -175,7 +179,7 @@
             </section>
         </main>
 
-        <!-- --------------- FOOTER --------------- -->
+        <!-- FOOTER -->
         <footer>
             <div class="top-footer">
                 <p>Benet Benson .</p>
@@ -203,10 +207,13 @@
         </footer>
     </div>
 
-    <!-- ----- TYPING JS Link ----- -->
+    <!-- TYPING JS -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <!-- ----- SCROLL REVEAL JS Link----- -->
+
+    <!-- SCROLL REVEAL JS -->
     <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- MAIN JS -->
     <script src="assets/js/main.js"></script>
 </body>
 </html>
