--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                     <textarea placeholder="Message" name="message" id="message" required></textarea>
                                 </div>
                                 <div class="form-button">
-                                    <button type="submit" class="btn" onclick="sendMail()">Send <i class="uil uil-message"></i></button>
+                                    <button type="button" class="btn" onclick="sendMail()">Send <i class="uil uil-message"></i></button>
                                 </div>
                             </div>
                         </form>
