--- a/index.html
+++ b/index.html
@@ -13,19 +13,37 @@
     <!-- FAVICON -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
-    <!-- EmailJS -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
+    <!-- EmailJS Initialization -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
     <script type="text/javascript">
+        // Initialize EmailJS with your user ID
         (function(){
-            emailjs.init({
-                publicKey: "TEJ3_kPECBsD4mYyS",
-            });
+            emailjs.init("TEJ3_kPECBsD4mYyS");
         })();
-    </script>
+        
+        // Function to send email using EmailJS
+        function sendMail() {
+            // Get values from the form
+            let params = {
+                name: document.getElementById('name').value,
+                email: document.getElementById('email').value,
+                message: document.getElementById('message').value
+            };
 
-    <!-- Custom Email JS -->
-    <script src="assets/js/email.js"></script>
+            // Send email using EmailJS
+            emailjs.send("contact_service", "contact_form", params)
+                .then(function(response) {
+                    alert("Email Successfully Sent");
+                    console.log("SUCCESS!", response.status, response.text);
+                }, function(error) {
+                    alert("Oops, something went wrong. Please try again later.");
+                    console.error("FAILED...", error);
+                });
+
+            // Clear the form fields after sending
+            document.getElementById('contact-form').reset();
+        }
+    </script>
 
     <title>Portfolio | Benet</title>
 </head>
