--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <div class="col">
                         <div class="contact-info">
                             <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                            <p><i class="uil uil-envelope"></i> Email: benetbenson815@gmail.com</p>
+                            <p><i class="uil uil-envelope"></i> Email: benet@benet.is-a.dev</p>
                             <p><i class="uil uil-phone"></i> Tel: +353 0851842132</p>
                         </div>
                     </div>
