--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </p>
                     </div>
                     <div class="featured-text-btn">
-                        <button class="btn blue-btn id="hireMeBtn"">Hire Me</button>
+                        <button class="btn blue-btn">Hire Me</button>
                     </div>
                     <div class="social_icons">
                         <div class="icon">
