--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             <p>I am well-versed in HTML, CSS and JavaScript , and other cutting edge
                                 frameworks and libraries,which allows me to implement interactive features.
                                 Additionally, I have experirence working with content management systems (CMS) like
-                                WordPress.
+                                WordPress. I also am proficient in programs like After Effects and Davinci Resolve.
                             </p>
                         </div>
                     </div>
@@ -157,6 +157,8 @@
                             <div class="skills-list">
                                 <span>WordPress</span>
                                 <span>Photoshop</span>
+                                <span>After Effects</span>
+                                <span>Davinci Resolve</span>
                             </div>
                         </div>
                     </div>
@@ -173,7 +175,7 @@
                     <div class="col">
                         <div class="contact-info">
                             <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                            <p><i class="uil uil-envelope"></i> Email: benet@benet.is-a.dev</p>
+                            <p><i class="uil uil-envelope"></i> Email: benetbenson815@gmail.com</p>
                             <p><i class="uil uil-phone"></i> Tel: +353 0851842132</p>
                         </div>
                     </div>
@@ -235,3 +237,4 @@
     <script src="assets/js/main.js"></script>
 </body>
 </html>
+
