--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
                         <div class="circle"></div>
                     </li>
                 </ul>
+                <!-- Dark Mode toggle -->
+                <div class="theme-toggle">
+                    <i id="theme-icon" class="uil uil-moon"></i>
+                </div>
             </div>
         </nav>
 
@@ -237,4 +241,5 @@
     <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
