--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                         <a href="#contact" class="nav-link">Contact</a>
                         <div class="circle"></div>
                     </li>
+                    <li class="nav_list">
+                        <div class="theme-toggle">
+                            <i id="theme-icon" class="uil uil-moon"></i>
+                        </div>
+                    </li>
                 </ul>
                 <!-- Dark Mode toggle -->
                 <div class="theme-toggle">
@@ -241,5 +246,6 @@
     <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
